PNSAC newsletter--Mar.2020.

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -10,8 +10,8 @@
 
 \maketitle
 
-\end{multicols}
 
+\end{multicols}
 
 
 \vspace{12pt}
@@ -20,21 +20,32 @@ Putting out this edition of the Chronicle has been an example of great
 co-operation from members and non-members alike. Thanks are owed to a
 number of people. Our member Gary Whitten was instrumental in getting
 the necessary permission from Air Force Magazine to publish the
-"Diversion to Alert" article.  Allan Bowes, another member, suggested
-that we should try to get the "Civil Merlins" article into an edition
-of the Chronicle.  Following his suggestion we contacted Ben Dunnell,
-the editor of Aeroplane Magazine. Through Ben's offices we were able to
-secure permission to reprint this article.  The "Civil Merlins" was
-part of a comprehensive 17 page Aeroplane Database article on the
-Merlin. If any members wish to read the entire article it was published
-in the July 2017 issue.
+"Diversion to Alert" article.  
+
+%Allan Bowes, another member, suggested
+%that we should try to get the "Civil Merlins" article into an edition
+%of the Chronicle.  Following his suggestion we contacted Ben Dunnell,
+%the editor of Aeroplane Magazine. Through Ben's offices we were able to
+%secure permission to reprint this article.  The "Civil Merlins" was
+%part of a comprehensive 17 page Aeroplane Database article on the
+%Merlin. If any members wish to read the entire article it was published
+%in the July 2017 issue.
 
 In addition thanks go out to the other contributors, namely Richard
-Lodge, Garry Dupont,  Neil Raynor and Bruce Gemmill. Bruce took the
-lead in putting together the Progress Report.  Finally, I would like to
-thank Drew Hodge our stalwart publisher of this edition. We are always
-on the lookout for content for the Chronicle so please do not hesitate
-to bring forward any ideas that you might have. Enjoy.
+Lodge, Garry Dupont,  Neil Raynor, and R\'{e}jean Demers. A special thanks
+to Bruce Gemmill who took the lead in putting together the progress report,
+which can be found in the Conservator's Corner section.
+
+Finally, I would like to thank Drew Hodge our stalwart publisher of this
+edition. We do appreciate receiving feedback from our readers including
+comments on the articles or suggestions for new articles. We are always on the
+lookout for content for the Chronicle so please do not hesitate to bring
+forward any ideas that you might have. As noted in the Conservator's Corner
+article the restoration of engine number 4 has been completed. Our next
+edition will focus on the engine restoration work so if you have any material
+or comments specific to that aspect of the restoration please let us know.
+Enjoy.
+
 
 \vspace{12pt}
 
