--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -34,11 +34,19 @@ with the express permission of Malcolm Morrison, RCAF F/L Ret. and the
 publishers of Air Force Magazine.}\\
 
 Immediately after New Year 1960, while based at RCAF Stn Trenton, and
-flying North Stars for 426(T)Sqn., I was assigned to be the First
+flying North Stars for 426(T) Sqn., I was assigned to be the First
 Officer on a flight to pick up an entertainment troupe of 30 Passengers
 from Montreal. This was planned as an 8 day trip providing
 entertainment to personnel working along the Quebec, Ontario and
 Manitoba sectors of the Mid Canada Detection Line.
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{alet-PC-155.png}
+   \caption*{\small \em The venerable Canadair North Star provided yeoman service to the RCAF---RCAF Photo PC-155}
+   \label{fig:wall-two}
+\end{figure}
 
 At the height of the Cold War, The Mid Canada Line was to be the main
 detection line between Canada and the USSR. It was located
@@ -47,10 +55,10 @@ Hopedale, Labrador to Dawson Creek, B.C. The system was put into
 service in 1957, and decommissioned in 1964. The more northerly DEW
 radar line began full operation in 1957.
 
-Our 426Sqn crew consisted of Captain – F/O H.(Hank) Zbesheski, First
-Officer – F/O M.G.(Mac or Mo) Morrison, Navigator – F/O Roger Fridel,
-Radio Officer – F/O Peter Dragovich, Flt Engineer – Sgt Miller, Flt
-Engineer – Sgt Sopaz, Trans Tech – LAC Hall.
+Our 426Sqn crew consisted of Captain---F/O H.(Hank) Zbesheski, First
+Officer---F/O M.G.(Mac or Mo) Morrison, Navigator---F/O Roger Fridel,
+Radio Officer---F/O Peter Dragovich, Flt Engineer---Sgt Miller, Flt
+Engineer---Sgt Sopaz, Trans Tech---LAC Hall.
 
 It should be noted that, on northern flights such as this, it was
 normal to have two Flight Engineers on the crew, due to the difficulty
@@ -148,6 +156,14 @@ As they say "all the best laid plans of mice and men", something is
 bound to cause a SNAFU. The following is an account of what happened,
 in the best chronology that my memory and my log book records can
 account for.\\
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{alert-PCP-83-191_cropped.png}
+   \caption*{\small \em North Stars were routinely used in harsh Arctic conditions---RCAF Photo PCP-83-191}
+   \label{fig:wall-two}
+\end{figure}
 
 \noindent\textbf{Day 1, 8 Jan 1960, North Star \#17502:}\\
 
@@ -356,6 +372,14 @@ so as to avoid the requirement to oil dilute. We succeeded to start
 within less than 40 minutes, thanks to our flight engineers, both of
 whom worked on the over-wing refueling process together.
 
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{alert-PL-54044.png}
+   \caption*{\small \em One of the North Stars from the Morrison story---aircraft \#17512---RCAF Photo PL-54044}
+   \label{fig:wall-two}
+\end{figure}
+
 The runway at Resolute Bay is almost true north and south. The
 buildings were at the time located to the west of the runway with the
 bulk of them being located about halfway along the runway and not less
@@ -474,12 +498,33 @@ sweeping the accumulated snow off the wings, we were able to restart
 all engines and proceed on our 3:15 hour flight to Trenton. The flight
 and arrival at Trenton was uneventful.
 
+%\begin{figure}[httb]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics [scale=0.5]{alert-PL-54068.png}
+%   \caption*{\small \em The beauty of Canada's Arctic is framed by the nose of a North Star---RCAF Photo PL-54068}
+%   \label{fig:wall-two}
+%\end{figure}
+
 During a rehash of the journey a few days later, it was disclosed to us
 that a short time prior to our arrival at Alert, the base had resolved
 the problems that required the denatured alcohol, but felt that they
 would like to have the product in case of future issues. We never did
 find out how our entertainment troupe made the return trip from
 Churchill to Montreal. 
+
+\end{multicols}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics {alert-PL-54068.png}
+   \caption*{\small \em The beauty of Canada's Arctic is framed by the nose of a North Star---RCAF Photo PL-54068}
+   \label{fig:wall-two}
+\end{figure}
+
+
+
 
 %\address{Web site:
 %{\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
@@ -509,6 +554,8 @@ Churchill to Montreal.
 \begin{footnotesize}
     \raggedleft PNSAC\\
 \end{footnotesize}
+
+\begin{multicols}{2}
 
 % End of text.
 
