--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -19,13 +19,21 @@ series, developed in 1944. These were single-stage twin-speed units
 similar to the Merlin 24s fitted to the RAF's Lancasters, but were
 modified to improve service life, and were fitted to Transport
 Command's Avro Yorks. Long-range transport operation entailed running
-at relatively low cruise powers for long periods — under these
+at relatively low cruise powers for long periods---under these
 conditions the lower cylinder head temperatures caused deposits of lead
 oxide from the fuel, resulting in excessive spark plug fouling. To
 counter this, the Merlin T24/4 incorporated a charge heater to increase
 the inlet temperature. Post-war, the Merlin 500 series essentially
 comprised civil and export versions of the T24, incorporating its
 modifications, though only the Merlin 501 included a charge heater.
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{merlin-1-feb-2020.jpg}
+   \caption*{\small \em Rolls-Royce Merlin Engine}
+   \label{fig:wall-two}
+\end{figure}
 
 The 600 and 700-series engines were two-speed two-stage engines, based
 on the military 100-series. They were fitted with the so-called
@@ -50,6 +58,14 @@ roughly a third of that of commercial US radial engines. The engines
 also produced a lot of cabin noise, though this was alleviated somewhat
 by revised 'cross-over' exhausts that ducted the cabin-side stacks
 outboard, developed first by TCA and then by Rolls-Royce themselves.
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{nstar-tca-feb-2020.jpg}
+   \caption*{\small \em TCA Canadair DC-4M North Star}
+   \label{fig:wall-two}
+\end{figure}
 
 The extra running costs were mostly borne by Rolls-Royce. When TCA's
 managing director expressed dissatisfaction with the Merlin's
