--- a/pnsac/newsletter/article_Feature3.tex
+++ b/pnsac/newsletter/article_Feature3.tex
@@ -28,7 +28,7 @@ Housing Initiative (MHI) to do something about that stat. MHI is a
 federally registered charity based in Ottawa which provides affordable
 housing: currently it has about 140 units with 400 residents scattered
 across the city. What started as a desire to provide affordable housing
-has morphed into an ethos to build communities – Veterans' House is the
+has morphed into an ethos to build communities---Veterans' House is the
 latest iteration of that approach.
 
 What MHI and its volunteer members did was: articulate the need to
@@ -57,8 +57,8 @@ wheelchair accessible. Again, with a community spirit in mind, the site
 will also include a gym, gardens, service-dog park, and communal
 kitchen and BBQ area for when residents want to share meals together.
 
-Together with our partners – many of them with direct connections to
-the military and Veterans – Veterans' House: the Andy Carswell Building
+Together with our partners---many of them with direct connections to
+the military and Veterans---Veterans' House: the Andy Carswell Building
 will provide a "military-family" structure to residents which they will
 recognize and which research has shown many homeless Veterans miss and
 which contributes to their slide into homelessness. A fully list of our
