--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,17 +10,30 @@
 
 \maketitle
 
+The notes below were written in the middle of February and since that
+time a sad event has taken place in that our old friend and Life Member
+of PNSAC, Ted Devey, has passed away. We have only a few Life Members.
+Such memberships are granted only in circumstances where a member has
+made a special and exceptional contribution to the North Star
+restoration project. Ted Devey was one such member. At 94 years old,
+Ted was our oldest member and the oldest Museum restoration volunteer.
+We will miss Ted, his continuous supply of amusing anecdotes and of
+course his dedication to the North Star restoration project. Ted was
+the subject of "Our Members" section of the January 2019 edition of the
+Chronicle which is available on the Association's website.
+
 Since the last issue of the NStar Chronicle we have taken part in the
 70th Anniversary celebrations of the first non-stop transcontinental
-flight across Canada which was flown by a North Star. We partnered with
-the Museum for this event and were very pleased to welcome
-representatives from the RCAF who joined us for the day. After the
+flight across Canada which was flown by a North Star. Each year work is
+performed on the aircraft which cannot be done outside the Reserve Hangar
+during the winter. The aircraft is also prepared for display to enable the
+public to view the progress made in the last year. After the
 formal part of the celebration, when impressive plaques of the aircraft
 made by our member Chris McGuffin, had been presented to the RCAF and
 the Museum Director General, Chris Kitzan, everybody moved to the
 Reserve Hangar and the aircraft was opened to our association members,
 guests and in the afternoon to 90 members of the public who had
-pre-booked a tour. R\'{e}jean(R\'{e}j)Demers, the Museum Special Project
+pre-booked a tour. R\'{e}jean (R\'{e}j) Demers, the Museum Special Project
 Manager, guided the tours assisted by several of our members. Towards
 the end of the tour session someone in the main Museum activated the
 fire alarm. The Museum was promptly evacuated, and the public was
@@ -28,9 +41,13 @@ recommended to go to the Reserve  Hangar until the fire issue had been
 dealt with (it turned out to be a false alarm). Quite unexpectedly R\'{e}j
 and the guides found themselves surrounded by many Museum visitors who
 had not signed up for the North Star tour. Unperturbed by this event,
-Réj and the guides welcomed the unscheduled visitors and gave them an
+R\'{e}j and the guides welcomed the unscheduled visitors and gave them an
 impromptu tour of the aircraft. Both our treasurer and our membership
 secretary were pleased with the days' result!
+
+% We partnered with
+%the Museum for this event and were very pleased to welcome
+%representatives from the RCAF who joined us for the day.
 
 As I write this the days are getting longer and R\'{e}j is planning work to
 be done on the aircraft when it is moved outside onto the ramp in the
@@ -39,7 +56,7 @@ inside the Reserve Hangar during the winter. We also prepare the
 aircraft for display when, once again, we open the aircraft to enable
 the public to view progress made in the last year.
 
-This year we are planning two major display events. The first will be
+This year the Museum is planning two major display events. The first will be
 on the Doors Open Ottawa weekend (June 6 and 7). This is a great time
 for our members to meet the public, many of whom have an interest in
 aviation. Our second main event, on Canada Day, is enjoyable for all
@@ -52,7 +69,7 @@ back page of this issue of the Chronicle)
 Shortly before Christmas a major milestone, in the  restoration of the
 North Star, was reached. Work on Merlin engine \#4 was completed and it
 was dragged on its cradle by the Museum forklift truck to the
-Restoration hangar for later mounting on the aircraft to join the other
+Reserve hangar for later mounting on the aircraft to join the other
 three restored engines. Chris McGuffin put some video clips onto our
 Facebook page of the engine being dragged through the Museum parking
 lot and into the hangar. Watch for more of our Facebook messages since
