--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -35,9 +35,18 @@ rust from nuts and bolt heads that could not be taken out for cleaning.
 Most notably were efforts by Charles Baril, who spent many months
 inside the nacelle; cleaning, inspecting and masking off for painting.
 The work took so long that special heating ducts and insulation needed
-to be positioned around the nacelle to keep it warm enough for Réjean
+to be positioned around the nacelle to keep it warm enough for R\'{e}jean
 Demers and Bruce Gemmill to apply a coat of primer and silver paint.
-(insert photo of North Star with orange tarp). Soon after the paint was
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{nacelle-4-paining-outside-feb-2020.png}
+   \caption*{\small \em Painting nacelle \#4 outside}
+   \label{fig:wall-two}
+\end{figure}
+
+Soon after the paint was
 applied, the North Star was moved inside for the winter. This occurred
 November 8th, just 3 days before our first snow storm of the winter.
 
@@ -55,6 +64,14 @@ careful planning and creative solutions, repairs were completed at STA:
 541, 560, 621 and currently, floor repairs in the loading area near the
 cargo doors.
 
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{New-Floor-Wall-Panels-feb-2020.png}
+   \caption*{\small \em New floor and wall panels}
+   \label{fig:wall-two}
+\end{figure}
+
 The Carpentry Crew, led by Chris McGuffin measured, cut and trimmed new
 plywood panels for the interior walls of the main cabin.  These were
 painted green to match the original colour scheme, then set aside until
@@ -63,8 +80,7 @@ John Makadi assessed these, according to the amount of damage caused by
 wear and tear, as well as leaks around windows and doors.  Some panels
 were salvaged with a few minor repairs, then painted. These are now
 ready for installation.  Several others were so badly damaged that
-completely new panels needed to be made. (Photo of wall and floor
-panel)
+completely new panels needed to be made. 
 
 Finally, work started on the third group of panels.  These floor panels
 had significant damage to one or two edges.  The damaged areas need to
@@ -79,14 +95,11 @@ accessories that had been removed from nacelle \#4.  This included
 pumps, plumbing, fluid and air lines, control cables, bell cranks and
 pulleys, electrical harnesses, valves and filter canisters. Each needed
 assessment, cleaning, repair, polishing or painting as well as
-documentation and photographs of the work undertaken. (photo of fuel
-filter, junction box).
-
-Phil Chrysler and Brian Cole went to work on the many fairings and
+documentation and photographs of the work undertaken. Phil Chrysler and 
+Brian Cole went to work on the many fairings and
 access panels that also required cleaning and polishing to be ready to
-be placed back on the aircraft. A special mention here for Ted Devey,
-who, before retiring from the shop had his hand on a few cowl panels
-and nacelle components.
+be placed back on the aircraft. A special mention should be made for the late
+Ted Devey who had had his hand on a few cowl panels and nacelle components.
 
 Several special projects were also undertaken during the year.  John
 Makadi removed the nose radome to determine what radar equipment had
@@ -97,13 +110,31 @@ safely reach the top of the fuselage. Neil Raynor and Will Assad
 overhauled a propeller stand the Museum had not used for many years. 
 It got a fresh coat of paint and new wheels and tires, and is now
 holding two North Star propellers, until they can be installed on the
-appropriate engine. (photo of prop stand, two propellers). Michael Hope
+appropriate engine. 
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{prop-stand.png}
+   \caption*{\small \em Prop stand}
+   \label{fig:wall-two}
+\end{figure}
+
+Michael Hope
 assisted in removal of Prop. \#1 and assembly of soon-to-be-installed
 Prop. \#4. Phil Chrysler and Brian Cole fabricated cables and special
 fittings to secure the landing gear so the aircraft could be safely
 displayed. Other duties  such as; an inventory of replaced / restored
 and spare components were carried out.  All of these were packed and
 stored in a new location of the Reserve Hangar.
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics [scale=0.5]{eng-4-pre-move-feb-2020.png}
+   \caption*{\small \em Engine \#4---before it was moved to the Reserve Hangar}
+   \label{fig:wall-two}
+\end{figure}
 
 Number \#4 engine has now  been moved to the Reserve Hangar. The crew
 are prepping the oil tank for clear coat then it will be assembled and
@@ -122,7 +153,7 @@ interrelated systems and locations. Scaffolding is in place, over the
 forward fuselage area above the cockpit to assess air-frame
 requirements and treatment methods to be used on exterior hull
 surfaces. Restoration records are also being reviewed by Conservation
-Special Project Manager Réjean Demers. The Work Order / Task Card
+Special Project Manager R\'{e}jean Demers. The Work Order / Task Card
 format is lending well to Museum information uploading tools. Efforts
 are underway to recruit two to four new shop volunteers, and R\'{e}j
 invites any new applicants referred by PNSAC to apply.
