--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -74,7 +74,7 @@
 	\input{article_PresReport} 
 \end{article}
 
-\pagebreak
+%\pagebreak
 
 % Progress report ................................................... %
 
@@ -92,7 +92,7 @@
     \input{article_MemberInterview} 
 \end{article}
 
-\pagebreak
+%\pagebreak
 
 % Features
 % ........................................................... %
@@ -106,11 +106,11 @@
 \pagebreak
 
 % Feature article
-\begin{article}                 
-	\input{article_Feature2} 
-\end{article}
-
-\pagebreak
+%\begin{article}                 
+%	\input{article_Feature2} 
+%\end{article}
+%
+%\pagebreak
 
 % Feature article
 \begin{article}
@@ -142,10 +142,10 @@
 %	\input{article_SpecialEvents} 
 %\end{article}
 
-% Miscellany article 
- \begin{article}
- 	\input{article_Miscellany} 
- \end{article}
+%% Miscellany article 
+% \begin{article}
+% 	\input{article_Miscellany} 
+% \end{article}
 
 %\pagebreak
 
